# JAV-MetadataHub

./: .env.example  .gitignore  AGENTS.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
docs/: architecture.md  codex_tasks.md  compliance.md  data_sources.md  schema.md
docs/research/: 2026-06-21-fanza-dmm-web-api-spec.md  2026-06-21-public-metadata-sources.md  2026-06-21-r18-dump-spec.md  README.md
docs/source_specs/: avwikidb.md  fanza_dmm_api.md  javbus.md  javdb.md  javlibrary.md  r18_dump.md
src/jav_metadatahub/: cli.py  config.py  logging.py
src/jav_metadatahub/api/: __init__.py  dependencies.py  main.py
src/jav_metadatahub/collectors/: __init__.py  fanza_client.py  fanza_collector.py
src/jav_metadatahub/db/: __init__.py  base.py  models.py  session.py
src/jav_metadatahub/importers/: __init__.py  r18_dump_importer.py
src/jav_metadatahub/normalizers/: __init__.py  code.py
tests/: test_api_read_only.py  test_canonical_repositories.py  test_cli_fanza_ingestion.py  test_cli_fanza_work_promotion.py  test_db_models.py  test_fanza_batch_ingestion.py  test_fanza_client.py  test_fanza_collector.py  test_fanza_ingestion.py  test_fanza_observation_runner.py  test_fanza_parser.py  test_fanza_work_promotion_runner.py  test_field_observations_repository.py  test_import.py  test_normalize_code.py  test_observations_service.py  test_parser_boundaries.py  test_r18_dump_importer.py  test_r18_parser.py  test_source_records_repository.py  test_work_promotion.py
(+32 files in other folders)
