[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jav-metadatahub"
version = "0.1.0"
description = "Public metadata foundation for Japanese adult video metadata analytics."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13",
    "duckdb>=1.0",
    "fastapi>=0.111",
    "httpx>=0.27",
    "orjson>=3.10",
    "pandas>=2.2",
    "psycopg[binary]>=3.1",
    "pyarrow>=16.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "rich>=13.7",
    "sqlalchemy>=2.0",
    "tenacity>=8.2",
    "typer>=0.12",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.5",
]

[project.scripts]
javhub = "jav_metadatahub.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
strict = true
packages = ["jav_metadatahub"]

